--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/fiber": "^9.1.2",
     "@tabler/icons-react": "^3.33.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.15.0",
     "lottie-react": "^2.4.1",
     "motion": "^12.15.0",
     "next": "15.3.3",
